--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<div id="map" style="width:1024px; height:768px"></div>
 		
 	</body>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDvrXeK9w7_Dl8yNYnwBx3kuxjDtOAU72s&callback=init"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=<Add Your Google Maps API Key here>"></script>
 <script>
 
 var map;
